fixed gallery scroll to not show white space

--- a/styles.css
+++ b/styles.css
@@ -227,7 +227,7 @@ header {
     align-items: center;
     width: 600%; /* Total width for 6 images */
     transition: transform 1s ease-in-out;
-    animation: scrollGallery 55s linear infinite alternate; /* Auto-scroll animation */
+    animation: scrollGallery 52s linear infinite alternate; /* Auto-scroll animation */
     
 }
 
@@ -243,7 +243,7 @@ header {
         transform: translateX(0);
     }
     100% {
-        transform: translateX(-100%); /* Move to next image */
+        transform: translateX(-82%); /* Move to next image */
     }
 }
 
